fixed z-index in modal

--- a/css/main.css
+++ b/css/main.css
@@ -174,7 +174,7 @@ img {
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 1;
   background-color: #ffffff;
 }
 
@@ -559,6 +559,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 2;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   -webkit-transition: opacity cubic-bezier(0.4, 0, 0.2, 1) 250ms;
@@ -576,7 +577,6 @@ img {
   top: 50%;
   left: 50%;
   padding: 40px;
-  z-index: 2;
   -webkit-transform: translate(-50%, -50%) scale(1);
       -ms-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
